# janitor_shooter

./: .gitignore  CMakeLists.txt  Makefile  README.md  cmake_install.cmake
.github/workflows/: build-macos.yml  build-windows.yml
assets/: animationrender.psd
cmake/: FindSDL2_image.cmake
lib/: sdl2-config.cmake
src/: Character.cpp  Character.hpp  Collision.cpp  Collision.hpp  Combat.cpp  Combat.hpp  Game.cpp  Game.hpp  GameObject.cpp  GameObject.hpp  TextureManager.cpp  TextureManager.hpp  main.cpp
